# vendery

./: .gitignore  README.md  manage.py  pyproject.toml
customers/migrations/: 0001_initial.py
dev-utils/: create-pao-tenant.py  delete-factories-images.sh  delete-fake-data.py  generate-fake-data.py  install-dependecies-python.sh  reset-migrations.sh  start-all-services.sh  stop-all-services.sh
inventory/migrations/: 0001_initial.py
staticfiles/tenants/huellitas/css/: invoice.sass  note.css  style.css
staticfiles/tenants/huellitas/js/: sell_button.js
staticfiles/tenants/pao/css/: note.css
staticfiles/tenants/pao/js/: inventory.js  sell_button.js
tenants/pao/templates/: index.html
vendery/: .env-template  asgi.py  public_urls.py  settings.py  urls.py  wsgi.py
vendery/admin_panel/: forms.py  urls.py  views.py
vendery/customers/: models.py  views.py
vendery/customers/migrations/: 0001_initial.py
vendery/inventory/: admin.py  forms.py  models.py  urls.py  views.py
vendery/inventory/migrations/: 0001_initial.py  0002_auto_20210603_0302.py  0002_auto_20210603_0430.py  0002_auto_20210606_0409.py  0002_auto_20210708_0614.py  0003_products_image.py  0004_auto_20210606_0707.py  0005_remove_orders_store.py
vendery/inventory/tests/: factories.py
vendery/landing_page/: urls.py  views.py
vendery/tenants/huellitas/static/css/: utils.css
vendery/tenants/huellitas/templates/: 404.html  500.html  index.html
vendery/tenants/huellitas/templates/components/: card_product.html  cart_modal.html  nav.html  (+2 more)
vendery/tenants/pao/templates/: index.html  login.html
(+102 files in other folders)
