[tool.poetry]
name = "vendery"
version = "0.1.0"
description = ""
authors = ["laloh <eduardocarhue@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.11"
psycopg2-binary = "^2.8.6"
django-extensions = "^3.1.3"
django-tenants = "^3.3.1"
django-model-utils = "^4.1.1"
Pillow = "^8.2.0"
gunicorn = "^20.1.0"
django-compressor = "^2.4.1"
python-dotenv = "^0.17.1"
django-3-jet = {url = "https://github.com/Barukimang/django-jet/archive/dev.zip"}
django-widget-tweaks = "^1.4.8"
weasyprint = "^52.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
